--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "tests"
   },
   "scripts": {
-    "dev": "npx tailwindcss -i tailwind.css -o style.css --watch",
-    "build": "postcss tailwind.css -o style.css"
+    "sync": "browser-sync start --proxy 'siphome.wp' --files \"**/*\"",
+    "start": "npx tailwindcss -i tailwind.css -o style.css --watch",
+    "dev": "postcss tailwind.css --output output.css",
+    "watch:dev": "nodemon -x npm run dev -w tailwind.config.js -w tailwind.css",
+    "watch": "run-p watch:dev sync"
   },
   "repository": {
     "type": "git",
@@ -23,12 +26,15 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "autoprefixer": "^10.4.8",
+    "browser-sync": "^2.27.10",
     "cssnano": "^5.1.13",
     "postcss": "^8.4.16",
     "postcss-cli": "^10.0.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.4"
+    "@tailwindcss/typography": "^0.5.4",
+    "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5"
   }
 }
