Fix - change the start command to dev

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "sync": "browser-sync start --proxy $SITE_DOMAIN --files \"**/*\"",
-    "start": "npx tailwindcss -i tailwind.css -o style.css --watch",
+    "dev": "npx tailwindcss -i tailwind.css -o style.css --watch",
     "build": "postcss tailwind.css --output output.css",
     "watch:dev": "nodemon -x npm run dev -w tailwind.config.js -w tailwind.css",
     "watch": "run-p watch:dev sync"
